# sample_app_bk2

./: CMakeLists.txt  LICENSE.md  README.md  README_32bit.md  RUNMEFIRST.sh  changelog.md
.github/workflows/: cmake.yml
cmake/: CPM.cmake  CompilerWarnings.cmake  Find32or64bit.cmake  StaticAnalyzers.cmake  print.cmake  utils.cmake
include/extras_cpp/: version.hpp
include/extras_cpp/game/: clazz.hpp  interface.hpp
include/sample_app/: version.hpp
include/sample_app/game/: clazz.hpp  interface.hpp
instances/: extras_cpp_app.cpp  sample_app_app.cpp  your_app_here.cpp
interfaces/: main.cpp
interfaces/chessgame/: dock_Interface.cpp  mold_Interface.cpp  test_Interface.cpp
interfaces/injections/: test_injections.cpp
